# SH25-Lance

./: .env.example  Makefile  README.md  accounts.sh  dao.sh  environments.toml  full.sh  index.html  market.sh  package-lock.json  package.json  run.sh
contracts/governor-dao/src/: contract.rs  dispute.rs  errors.rs  governor.rs  lib.rs
contracts/governor-dao/src/dependencies/: votes.rs
contracts/lance-protocol/: Cargo.toml
contracts/lance-protocol/src/: contract.rs  lib.rs
contracts/lance-protocol/src/events/: event.rs
contracts/lance-protocol/src/methods/: admin.rs  balance.rs  dispute.rs  initialize.rs  mod.rs  token.rs  vote.rs
contracts/market/: Cargo.toml
contracts/market/src/: contract.rs  lib.rs
contracts/market/src/events/: event.rs
contracts/market/src/methods/: admin.rs  balance.rs  dispute.rs  initialize.rs  mod.rs  service.rs  user.rs
contracts/market/src/storage/: constants.rs  error.rs  mod.rs  service.rs  service_status.rs  storage.rs  user.rs
contracts/market/src/tests/: blend.rs  exployee.rs  milestone.rs  mod.rs  service.rs  user.rs
contracts/market/src/tests/config/: contract.rs
scripts/: update_lance_wasm.sh
src/: App.tsx
src/api/: disputes.ts  types.ts
src/components/: AnonymousVotingSetup.tsx  CreateDisputeButton.tsx  DisputeList.tsx  ExecuteDispute.tsx  GuessTheNumber.tsx  RegisterJudgeButton.tsx  ViewDisputeButton.tsx  VotingPanel.tsx
src/contracts/: util.ts
src/hooks/: useAnonymousVoting.ts
src/pages/: DisputeDetail.tsx  Home.tsx
src/util/: contractCall.ts  crypto.ts  friendbot.ts
(+17 files in other folders)
